# nis_paper

./: README.md  pyproject.toml
examples/figures/: 3d_meatball.py  3d_pwl.py  kde.py  nis_meatball.py  nis_pwl.py  sis_fail.py  utils.py
examples/ice_vmfnm/: EMvMFNM.py  ERADist.py  iCE_vMFNM.py  implementation.py
examples/numerical_examples/: experiment.py  performance_functions.py  print.py  print_dmc.py
examples/numerical_examples/meatball/: dmc_meatball.pkl  dmc_meatball.py  ice_meatball.pkl  ice_meatball.py  nis.meatball.py  nis_meatball.pkl  sis_meatball.pkl  sis_meatball.py
examples/numerical_examples/portfolio/: dmc_portfolio.py  dmc_portfolio_102.pkl  dmc_portfolio_252.pkl  dmc_portfolio_32.pkl  ice_portfolio.py  ice_portfolio_high.pkl  ice_portfolio_low.pkl  nis_portfolio.py  nis_portfolio_high.pkl  nis_portfolio_low.pkl  sis_portfolio.py  sis_portfolio_high.pkl  sis_portfolio_low.pkl
examples/numerical_examples/pwl/: dmc_pwl.pkl  dmc_pwl.py  ice_pwl.pkl  ice_pwl.py  nis_pwl.pkl  nis_pwl.py  sis_pwl.pkl  sis_pwl.py
examples/numerical_examples/suspension/: dmc_suspension.pkl  dmc_suspension.py  ice_suspension.pkl  ice_suspension.py  nis_suspension.pkl  nis_suspension.py  sis_suspension.pkl  sis_suspension.py
examples/numerical_examples/two_dof/: dmc_two_dof.pkl  dmc_two_dof.py  ice_two_dof.pkl  ice_two_dof.py  nis_two_dof.pkl  nis_two_dof.py  sis_two_dof.pkl  sis_two_dof.py
examples/sis/: SIS_aCS.py  implementation.py
nis/: distribution.py  em.py  importance_sample.py  initial_sample.py  markov_chain.py  nis.py  performance_function.py
