[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'nis'
version = '0.1.0'
requires-python = '>=3.12.3'
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
]

[project.optional-dependencies]
examples = [
    "seaborn==0.13.2",
    "matplotlib==3.9.2"
    "tqdm==4.66.5",
]

[tool.setuptools]
packages = ['nis']